@@ -86,6 +86,11 @@ message Event {
   // Mesos can release the resources associated with the task.
   message Kill {
     required TaskID task_id = 1;
+
+    // If set, overrides any previously specified kill policy for this task.
+    // This includes 'TaskInfo.kill_policy' and 'Executor.kill.kill_policy'.
+    // Can be used to forcefully kill a task which is already being killed.
+    optional KillPolicy kill_policy = 2;
   }
 
   // Received when the agent acknowledges the receipt of status
